--- a/web/frontend/components/main/main.html
+++ b/web/frontend/components/main/main.html
@@ -1,6 +1,6 @@
 <!--Barres de Nav-->
-    <div class="navbar-fixed">
-        <nav class="#e0e0e0 grey lighten-2">
+<!--    <div class="navbar-fixed">
+        <nav>
             <div class="nav-wrapper container">
                 <form ng-submit="$ctrl.getSearchQuestions()" id="search">
                     <input type="text" placeholder="Search..." ng-model="$ctrl.searchQuery" />
@@ -8,20 +8,10 @@
                 </form>
             </div>
         </nav>
-    </div>
+    </div>-->
 
 <div>
-    <ul id="slide-out" class="side-nav fixed #e0e0e0 grey lighten-2">
-        <li>
-            <div class="user-view">
-                <div class="background">
-                    <img src="images/office.jpg">
-                </div>
-                <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
-                <a href="#!name"><span class="white-text name">John Doe</span></a>
-                <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-            </div>
-        </li>
+    <ul id="slide-out" class="side-nav fixed">
         <li><a ui-sref="kanProfile"><i class="material-icons">face</i>My KanProfile</a></li>
         <li><a class="waves-effect">My KanLists</a></li>
         <li>
