--- a/web/frontend/assets/style.css
+++ b/web/frontend/assets/style.css
@@ -47,9 +47,15 @@ footer a {
 .collection {
     margin: 0px 0px 0px 30%;
 }
+.side-nav{
+
+    color: white !important;
+}
 .side-nav.fixed{
-    background-color: rgb(42,42,42);
-    -webkit-box-shadow: 7px 7px 5px 0px rgba(28, 34, 30, 0.75);
-    -moz-box-shadow:    7px 7px 5px 0px rgba(28, 34, 30, 0.75);
-    box-shadow:         7px 7px 5px 0px rgba(28, 34, 30, 0.75);
+    background-color: rgb(36,36,36);
+    box-shadow:       none;
+    text-align: center;
+}
+.side-nav li > a{
+    color: white !important;
 }
