--- a/web/frontend/components/main/main.html
+++ b/web/frontend/components/main/main.html
@@ -15,15 +15,15 @@
         <li>
             <div class="user-view">
                 <div class="background">
-                    <img src="images/office.jpg">
+                    <img src="">
                 </div>
-                <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
+                <a href="#!user"><img class="circle" src=""></a>
                 <a href="#!name"><span class="white-text name">John Doe</span></a>
                 <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
             </div>
         </li>
         <li><a ui-sref="kanProfile"><i class="material-icons">face</i>My KanProfile</a></li>
-        <li><a class="waves-effect">My KanLists</a></li>
+        <li><a class="waves-effect" ui-sref="myKanList">My KanLists</a></li>
         <li>
             <div class="divider"></div>
         </li>
