--- a/web/frontend/components/kanlist/kanList.html
+++ b/web/frontend/components/kanlist/kanList.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="kanList flex" ng-repeat="kanList in $ctrl.kanLists | limitTo : 5">
+  <div class="kanList flex" ng-repeat="kanList in $ctrl.kanLists track by $index">
 
-    <ng-youtube-embed video='kanList.url' autoplay="false" color="white" disablekb="true" end="20" width="200" height="140"></ng-youtube-embed>
+    <ng-youtube-embed video='kanList' autoplay="false" color="white" disablekb="true" end="20" width="200" height="140"></ng-youtube-embed>
 
   </div>
 </div>
