--- a/web/frontend/components/kanlists/kanLists.html
+++ b/web/frontend/components/kanlists/kanLists.html
@@ -1,6 +1,8 @@
 <div class="container">
-  <div dir-paginate="kanList in $ctrl.kanLists | itemsPerPage:10" current-page="$ctrl.currentPage">
-    <ng-youtube-embed video='kanList.url' autoplay="false" color="white" disablekb="true" end="20" width="200" height="140"></ng-youtube-embed>
+  <div dir-paginate="kanList in $ctrl.kanLists | itemsPerPage: 10 track by $index" current-page="$ctrl.currentPage">
+    <ng-youtube-embed video='kanList' autoplay="false" color="white" disablekb="true" end="20" width="200" height="140"></ng-youtube-embed>
+    <a class="btn-floating btn-large waves-effect waves-light red" ui-sref="$ctrl.saveKan()"><i class="material-icons">add</i></a>
   </div>
   <dir-pagination-controls boundary-links="true" on-page-change="$ctrl.pageChangeHandler(newPageNumber)" template="node_modules/angular-utils-pagination/dirPagination.tpl.html"></dir-pagination-controls>
+<!--</div>-->
 </div>
