change the get method, supp all the spaces in the code

--- a/web/frontend/assets/style.css
+++ b/web/frontend/assets/style.css
@@ -53,3 +53,11 @@ footer a {
 .decale {
     margin-left:30%;
 }
+.accepted {
+    background-color: green;
+}
+.not-accepted {
+    background-color: red;
+}
+
+/* End of KanInvitation */
