--- a/web/frontend/components/kanInvitation/kanInvitation.html
+++ b/web/frontend/components/kanInvitation/kanInvitation.html
@@ -2,27 +2,28 @@
     <div class="formInvit">
         <form>
             <label for="recipient">Recipient</label>
-            <input ng-model="$ctrl.invit.email" type="text" name="recipient" value="" placeholder="the recipient mail here">
-            <textarea ng-model="$ctrl.invit.message" rows="4" cols="8" aria-placeholder="you can type an invit message if you want..."></textarea>
-            <button type="submit" ng-click"$ctrl.sendInvit($ctrl.invit)">Send your message</button>
+            <input ng-model="$ctrl.newUser.email" type="text" name="recipient" value="" placeholder="the recipient mail here">
+            <textarea ng-model="$ctrl.newUser.message" rows="4" cols="8" aria-placeholder="you can type an invit message if you want..."></textarea>
+            <button ng-click="$ctrl.sendInvit($ctrl.newUser)">Send your message</button>
         </form>
     </div>
 
-    <table class="bordered striped">
+    <table class="bordered highlight">
         <thead>
             <tr>
                 <th>Firstname</th>
                 <th>Lastname</th>
                 <th>Email</th>
-
+                <th>Status</th>
             </tr>
         </thead>
-
         <tbody ng-repeat="user in $ctrl.users">
             <tr>
                 <td>{{user.first_name}}</td>
                 <td>{{user.last_name}}</td>
-                <td>{{user.email}}</td>
+                <td>{{user.email }}</td>
+                <td ng-if="user.first_name" class="accepted">accepted</td>
+                <td ng-if="user.message" class="not-accepted">not accepted</td>
             </tr>
         </tbody>
     </table>
