--- a/web/frontend/components/kanInvitation/kanInvitation.html
+++ b/web/frontend/components/kanInvitation/kanInvitation.html
@@ -2,7 +2,7 @@
     <div class="formInvit">
         <form>
             <label for="recipient">Recipient</label>
-            <input ng-model="$ctrl.newUser.email" type="text" name="recipient" value="" placeholder="the recipient mail here">
+            <input ng-model="$ctrl.newUser.email" type="email" name="recipient" value="" placeholder="the recipient mail here">
             <textarea ng-model="$ctrl.newUser.message" rows="4" cols="8" aria-placeholder="you can type an invit message if you want..."></textarea>
             <button ng-click="$ctrl.sendInvit($ctrl.newUser)">Send your message</button>
         </form>
