--- a/web/frontend/components/kanInvitation/kanInvitation.html
+++ b/web/frontend/components/kanInvitation/kanInvitation.html
@@ -1,10 +1,11 @@
 <div class="decale">
     <div class="formInvit">
-        <form>
+        <form name="invit">
             <label for="recipient">Recipient</label>
-            <input ng-model="$ctrl.newUser.email" type="email" name="recipient" value="" placeholder="the recipient mail here">
+            <input ng-model="$ctrl.newUser.email" type="email" name="recipient" value="" placeholder="the recipient mail here" required>
             <textarea ng-model="$ctrl.newUser.message" rows="4" cols="8" aria-placeholder="you can type an invit message if you want..."></textarea>
             <button ng-click="$ctrl.sendInvit($ctrl.newUser)">Send your message</button>
+            
         </form>
     </div>
 
