--- a/web/frontend/assets/style.css
+++ b/web/frontend/assets/style.css
@@ -160,3 +160,17 @@ nav {
     color:white;
     text-align: center;
 }
+
+/* KanInvitation */
+
+.decale {
+    margin-left:30%;
+}
+.accepted {
+    background-color: green;
+}
+.not-accepted {
+    background-color: red;
+}
+
+/* End of KanInvitation */
