--- a/web/frontend/components/main/main.html
+++ b/web/frontend/components/main/main.html
@@ -23,7 +23,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li class="heightexpandable"><a ui-sref="kanProfile"><i class="material-icons">person_pin</i>My KanProfile</a></li>
                 <li class="heightexpandable"><a ui-sref="kanLists"><i class="material-icons">queue_music</i>KanLists</a></li>
-                <li class="heightexpandable"><a href="collapsible.html"><i class="material-icons">email</i>Invitations</a></li>
+                <li class="heightexpandable"><a ui-sref="kanInvitation"><i class="material-icons">email</i>Invitations</a></li>
             </ul>
             <ul class="right">
                 <li>
