--- a/web/frontend/assets/style.css
+++ b/web/frontend/assets/style.css
@@ -15,7 +15,6 @@ body{
     height: 100%;
     width: auto;
 }
-
 /*NavBar horizontale*/
 #search input[type="text"] {
     margin: 0px 5% 0px 2%;
@@ -159,4 +158,15 @@ nav {
 .tableplaylist td{
     color:white;
     text-align: center;
+}
+
+
+.divider{
+    margin-bottom: 20px;
+}
+form#search{;
+    margin-bottom: 20px;
+}
+.side-nav li a{
+    font-size: 12px;
 }
