--- a/web/frontend/components/kanlists/kanLists.html
+++ b/web/frontend/components/kanlists/kanLists.html
@@ -11,7 +11,7 @@
   <ul>
     <li ng-repeat="(key, url) in $ctrl.currentKanLists.urls">
       <a ng-if="url.includes('youtube')" ng-click='$ctrl.ytplayer(url); $ctrl.titre = key' class="active"><img class="icon" src="https://www.youtube.com/yt/brand/media/image/YouTube-icon-full_color.png">{{key}}</a>
-      <a ng-if="url.includes('soundcloud')" ng-click='$ctrl.sdplayer(url); $ctrl.titre = key' class="active"><img class="icon" src="http://www.iconsdb.com/icons/preview/orange/soundcloud-3-xxl.png">{{key}}</a>
+      <a ng-if="url.includes('soundcloud')" ng-click='$ctrl.sdplayer(url); $ctrl.titre = key' class="active"><img class="icon" src="https://upload.wikimedia.org/wikipedia/fr/b/bb/SoundCloud_logo.png">{{key}}</a>
       <a ng-if="url.includes('deezer')" ng-click='$ctrl.deezplayer(url); $ctrl.titre = key' class="active"><img class="icon" src="http://lh6.ggpht.com/xWRpCfAK6F2vF8ZPmTBi1oOyUI76GxuBGoD9jLGuVzq-4HuOCpDo1wdi6Gkhe2z4xg4=w300">{{key}}</a>
     </li>
   </ul>
@@ -38,30 +38,41 @@
         <li ng-repeat="tag in $ctrl.tagslist">{{tag}}</li>
       </ul>
       <div class="divider"></div>
-      <form ng-submit="$ctrl.getSearchQuestions()" id="search">
-        <input type="text" placeholder="Search..." ng-model='search' />
-      </form>
-      <table class="tableplaylist" style="width:100%">
-        <tr>
-          <th>Titre</th>
-          <th>Nb</th>
-          <th>Créateur</th>
-          <th> </th>
-        </tr>
-        <tr ng-repeat="kanList in $ctrl.kanLists | filter:search">
-          <td>{{kanList.nom}}</td>
-          <td>{{kanList.urls.length}}</td>
-          <td>{{kanList.creator.username}}</td>
-          <td>
-            <a ng-click='$ctrl.showTitles(kanList)' class="waves-effect waves-light btn"><i class="green material-icons">play_arrow</i></a>
-          </td>
-        </tr>
-      </table>
-      <!--<dir-pagination-controls boundary-links="true" on-page-change="$ctrl.pageChangeHandler(newPageNumber)" template="node_modules/angular-utils-pagination/dirPagination.tpl.html"></dir-pagination-controls>-->
     </div>
     <div class="col m1">
       -->
     </div>
+
+    <form ng-submit="$ctrl.getSearchQuestions()" id="search">
+      <input type="text" placeholder="Search..." ng-model='search' />
+      <a class="btn-floating btn-large waves-effect waves-light red right"><i class="material-icons">add</i></a>
+
+    </form>
+
+    <table class="tableplaylist" style="width:100%">
+      <tr>
+        <th>Titre</th>
+        <th>Nb</th>
+        <th>Créateur</th>
+        <th>Tags</th>
+        <th> </th>
+      </tr>
+      <tr ng-repeat="kanList in $ctrl.kanLists | filter:search">
+        <td>{{kanList.nom}}</td>
+        <td>{{kanList.urls.length}}</td>
+        <td>{{kanList.creator.username}}</td>
+        <td>
+          <ul class="taglist">
+            <li ng-repeat="tag in kanList.tags">{{tag}}</li>
+          </ul>
+        </td>
+        <td>
+          <a ng-click='$ctrl.showTitles(kanList)' class="waves-effect waves-light btn"><i class="material-icons">play_arrow</i></a>
+        </td>
+      </tr>
+    </table>
+    <!--<dir-pagination-controls boundary-links="true" on-page-change="$ctrl.pageChangeHandler(newPageNumber)" template="node_modules/angular-utils-pagination/dirPagination.tpl.html"></dir-pagination-controls>-->
+
   </div>
 </div>
 
