--- a/web/frontend/assets/style.css
+++ b/web/frontend/assets/style.css
@@ -1,3 +1,12 @@
+#homeCircle{
+    width: 100%;
+    height: 100%;
+
+}
+#homeCircle img{
+    width: 100%;
+    height: auto;
+}
 /*NavBar verticale*/
 body{
     background-color: rgb(42,42,42);
