--- a/web/frontend/components/kanProfile/kanProfile.html
+++ b/web/frontend/components/kanProfile/kanProfile.html
@@ -2,7 +2,7 @@
 <div>
     <nav>
         <div class="nav-wrapper fixed">
-            <a ui-sref="home" class="brand-logo"><img src="/logo.png "></a>
+            <a ui-sref="home" class="brand-logo"><img src="assets/images/logo.png "></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li class="heightexpandable"><a ui-sref="kanProfile"><i class="material-icons">person_pin</i>My KanProfile</a></li>
                 <li class="heightexpandable"><a ui-sref="kanLists"><i class="material-icons">queue_music</i>KanLists</a></li>
