--- a/web/frontend/assets/style.css
+++ b/web/frontend/assets/style.css
@@ -14,9 +14,19 @@ body{
 #slide-out{
     font-size: 28px;
 }
-.icons {
+
+.side-nav li > a {
+    margin: 20px 0px 10px 0px;
+    padding: 0px;
+    font-size: 12px;
+    text-align: left;
+}
+
+img.icon {
     margin-right: 20px;
- }
+    vertical-align: middle
+}
+
 .brand-logo{
     height: 80px;
 }
