--- a/web/frontend/components/kanlists/kanLists.html
+++ b/web/frontend/components/kanlists/kanLists.html
@@ -84,6 +84,8 @@
           </td>
           <td>
             <a ng-click='$ctrl.showTitles(kanList)' class="waves-effect waves-light btn"><i class="material-icons">play_arrow</i></a>
+            <a ng-click='$ctrl.savekanList()' class="waves-effect waves-light btn"><i class="material-icons">add</i></a>
+            <a ng-click='$ctrl.sendkanList()' class="waves-effect waves-light btn"><i class="material-icons">reply</i></a>
           </td>
         </tr>
       </table>
