--- a/web/frontend/components/kanInvitation/kanInvitation.html
+++ b/web/frontend/components/kanInvitation/kanInvitation.html
@@ -1,30 +1,64 @@
-<div class="decale">
-    <div class="formInvit">
-        <form name="invit">
-            <label for="recipient">Recipient</label>
-            <input ng-model="$ctrl.newUser.email" type="email" name="recipient" value="" placeholder="the recipient mail here" required>
-            <textarea ng-model="$ctrl.newUser.message" rows="4" cols="8" aria-placeholder="you can type an invit message if you want..."></textarea>
-            <button ng-click="$ctrl.sendInvit($ctrl.newUser)">Send your message</button> 
-        </form>
-    </div>
+<div>
+  <nav>
+    <div class="nav-wrapper fixed">
+      <a ui-sref="home" class="brand-logo"><img src="assets/images/logo.png "></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li class="heightexpandable"><a ui-sref="kanProfile"><i class="material-icons">person_pin</i>My KanProfile</a></li>
+        <li class="heightexpandable"><a ui-sref="kanLists"><i class="material-icons">queue_music</i>KanLists</a></li>
+        <li class="heightexpandable"><a ui-sref="kanInvitation"><i class="material-icons">email</i>Invitations</a></li>
+      </ul>
+      <ul class="right">
+        <li>
 
-    <table class="bordered highlight">
+          <a class="hide-on-large-only">
+
+            <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</div>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+
+<h1 class="center-align grey-text more_little">Invit a friend</h1>
+        <div class="row">
+            <div class="col m8 offset-m2">
+        <form class="grey-text" name="invit">
+            <input ng-model="$ctrl.newUser.email" type="email" name="recipient" value="" placeholder="The recipient mail here" required>
+            <textarea ng-model="$ctrl.newUser.message" rows="8" cols="8" aria-placeholder="you can type an invit message if you want..."></textarea>
+            <button class="top btn-large green" ng-click="$ctrl.sendInvit($ctrl.newUser)">Send your message</button> 
+        </form>
+        
+        
+    
+
+    <table class="bordered highlight grey-text top">
         <thead>
             <tr>
-                <th>Firstname</th>
-                <th>Lastname</th>
+                <th>Username</th>
                 <th>Email</th>
                 <th>Status</th>
             </tr>
         </thead>
         <tbody ng-repeat="user in $ctrl.users">
             <tr>
-                <td>{{user.first_name}}</td>
-                <td>{{user.last_name}}</td>
-                <td>{{user.email }}</td>
+                <td>{{user.username}}</td>
+                <td>{{user.email}}</td>
+                <td>{{user.status}}</td>
                 <td ng-if="user.first_name" class="accepted">accepted</td>
                 <td ng-if="user.message" class="not-accepted">not accepted</td>
             </tr>
         </tbody>
     </table>
-</div>
+    </div>
+    </div>
+
