--- a/web/frontend/components/login/login.html
+++ b/web/frontend/components/login/login.html
@@ -1,25 +1,61 @@
 
-  <div class="row">
+<div class="row superTop">
+    <div class="col m6 offset-m3">
+        <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+                <span class="card-title center-align">Login Form</span>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input ng-model="$ctrl.logUser.username" id="username" type="text" class="validate">
+                        <label for="username">Username</label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input ng-model="$ctrl.logUser.password" id="password" type="password" class="validate">
+                        <label for="password">Password</label>
+                    </div>
+                </div>
+
+                <div class="center-align">
+                <button ng-click="$ctrl.sendLogUser($ctrl.logUser)" class="top btn-large green" type="submit" name="action">Submit
+                    <!--<i class="material-icons right">send</i>-->
+                </button>
+                </div>
+
+
+
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+
+
+
+<!--<div class="row">
     <form class="col s12">
 
-      <div class="row">
-        <div class="input-field col s12">
-          <input ng-model="$ctrl.logUser.username" id="username" type="text" class="validate">
-          <label for="username">Username</label>
+        <div class="row">
+            <div class="input-field col s12">
+                <input ng-model="$ctrl.logUser.username" id="username" type="text" class="validate">
+                <label for="username">Username</label>
+            </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="input-field col s12">
-          <input ng-model="$ctrl.logUser.password" id="password" type="password" class="validate">
-          <label for="password">Password</label>
+        <div class="row">
+            <div class="input-field col s12">
+                <input ng-model="$ctrl.logUser.password" id="password" type="password" class="validate">
+                <label for="password">Password</label>
+            </div>
         </div>
-      </div>
 
-        <button ng-click="$ctrl.sendLogUser($ctrl.logUser)"class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <button ng-click="$ctrl.sendLogUser($ctrl.logUser)" class="btn waves-effect waves-light" type="submit" name="action">Submit
             <i class="material-icons right">send</i>
         </button>
-        
+
     </form>
-  </div>
-        
+</div>-->
