--- a/web/frontend/components/kanlists/kanLists.html
+++ b/web/frontend/components/kanlists/kanLists.html
@@ -54,7 +54,7 @@
       <ng-youtube-embed ng-if="$ctrl.ytburl != '' " video='$ctrl.ytburl' autoplay="true" color="white" disablekb="true" end="20"
         width="100%" height="250"></ng-youtube-embed>
 
-      <div ng-if="$ctrl.soundcloudurl == null && $ctrl.deezerurl == null && $ctrl.ytburl == null">Aucune playlist sélectionné</div>
+      <div class="titleplaylist center" ng-if="$ctrl.soundcloudurl == null && $ctrl.deezerurl == null && $ctrl.ytburl == null">Aucune kanlist sélectionnée</div>
 
       <div class="titlemusic center">{{$ctrl.titre}}</div>
 
@@ -84,8 +84,8 @@
           </td>
           <td>
             <a ng-click='$ctrl.showTitles(kanList)' class="waves-effect waves-light btn"><i class="material-icons">play_arrow</i></a>
-            <a ng-click='$ctrl.savekanList()' class="waves-effect waves-light btn"><i class="material-icons">add</i></a>
-            <a ng-click='$ctrl.sendkanList()' class="waves-effect waves-light btn"><i class="material-icons">reply</i></a>
+            <!--<a ng-click='$ctrl.savekanList()' class="waves-effect waves-light btn"><i class="material-icons">add</i></a>
+            <a ng-click='$ctrl.sendkanList()' class="waves-effect waves-light btn"><i class="material-icons">reply</i></a>-->
           </td>
         </tr>
       </table>
