--- a/web/frontend/components/kanInvitation/kanInvitation.html
+++ b/web/frontend/components/kanInvitation/kanInvitation.html
@@ -35,7 +35,7 @@
         <form class="grey-text" name="invit">
             <input ng-model="$ctrl.newUser.email" type="email" name="recipient" value="" placeholder="The recipient mail here" required>
             <textarea ng-model="$ctrl.newUser.message" rows="8" cols="8" aria-placeholder="you can type an invit message if you want..."></textarea>
-            <button class="top btn-large green" ng-click="$ctrl.sendInvit($ctrl.newUser)">Send your message</button> 
+            <button class="waves-effect waves-light btn" ng-click="$ctrl.sendInvit($ctrl.newUser)">Send your message</button> 
         </form>
         
         
