--- a/web/frontend/components/kanlists/kanLists.html
+++ b/web/frontend/components/kanlists/kanLists.html
@@ -71,7 +71,7 @@
           <th>Nb</th>
           <th>Créateur</th>
           <th>Tags</th>
-          <th> </th>
+          <th><a class="btn-floating btn-large waves-effect waves-light red" ui-sref="kanList"><i class="material-icons">add</i></a> </th>
         </tr>
         <tr ng-repeat="kanList in $ctrl.kanLists | filter:search">
           <td>{{kanList.nom}}</td>
