--- a/app/Resources/views/email.html.twig
+++ b/app/Resources/views/email.html.twig
@@ -1,11 +1,11 @@
-Bonjour {{mail}} !
-
-Voici une invitation de {{name}} !
-
-Voici sont message : 
-
-{{message}}
-
-Lien de l'invitation
-
-LIEN
+Bonjour {{mail}} !<br>
+<br>
+Voici une invitation de {{name}} !<br>
+<br>
+Voici son message : <br>
+<br>
+{{message}}<br>
+<br>
+Lien de l'invitation<br>
+<br>
+http://127.0.0.1:8080/#!/login<br>
