--- a/web/frontend/components/login/login.html
+++ b/web/frontend/components/login/login.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="center-align">
-                <button ng-click="$ctrl.sendLogUser($ctrl.logUser)" class="top btn-large green" type="submit" name="action">Submit
+                <button ng-click="$ctrl.sendLogUser($ctrl.logUser)" class="waves-effect waves-light btn" type="submit" name="action">Submit
                     <!--<i class="material-icons right">send</i>-->
                 </button>
                 </div>
