--- a/web/frontend/components/home/home.html
+++ b/web/frontend/components/home/home.html
@@ -1,4 +1,4 @@
 <div id="homeCircle">
-    <img ui-sref="kanLists" src="assets/images/homeShareKan2.png" alt="logo">
+    <img ui-sref="login" src="assets/images/homeShareKan2.png" alt="logo">
 </div>
 
